docs(Content): :memo: Update Data Engineering Experince for Atlassian Posting

--- a/cv/data-engineer-experience.tex
+++ b/cv/data-engineer-experience.tex
@@ -32,35 +32,32 @@
  {2024 --- Present}
  {
   \begin{cvitems}
-  \item Working in a high security environment with sensitive data, ensuring compliance with data protection standards
-  \item Led the implementation of Data Build Tool (DBT) for data transformation and modelling, enhancing data quality and consistency across multiple data sources
-  \item Designed and implemented dimensional model of data warehouse using Kimball methodology, improving data accessibility and reporting capabilities
-  \item Collaborated with cross-functional teams to define data requirements, ensuring alignment with business objectives and enhancing data-driven decision-making processes
-  \item Managed performance tuning and optimization of existing ETL processes, resulting in improved data processing times and reduced resource consumption
-  \item Developed comprehensive documentation for data models, ETL processes, and system architecture to facilitate knowledge transfer and ensure maintainability of solutions
-  \item Created and maintained project gantt charts and timelines, coordinating tasks and deliverables to ensure meeting production deadlines
+    \item Working in a high security environment with sensitive data, ensuring compliance with data protection standards.
+    \item Led the implementation of Data Build Tool (DBT) for data transformation and modelling, enhancing data quality and consistency across multiple data sources.
+    \item Designed and implemented dimensional model of data warehouse using Kimball methodology, improving data accessibility and reporting capabilities.
+    \item Collaborated with cross-functional teams to define data requirements, ensuring alignment with business objectives and enhancing data-driven decision-making processes.
+    \item Managed performance tuning and optimization of existing ETL processes, resulting in improved data processing times and reduced resource consumption.
+    \item Developed comprehensive documentation for data models, ETL processes, and system architecture to facilitate knowledge transfer and ensure maintainability of solutions.
+    \item Utilized Agile methodologies to manage project delivery, coordinating cross-team dependencies and ensuring timely delivery of data solutions.
   \end{cvitems}
  }
 
-\cventry%
-  {Data Engineer/Team Lead}
-  {Ontario Public Service --- Treasury Board Secretariat}
-  {Toronto, Canada}
-  {2019 --- 2024}
-  {
-    \begin{cvitems}
-      \item Led the division's data overhaul project, modernizing and enhancing digital data infrastructure. Utilized Python and Pandas for local data processing, uploading data from Excel inputs to an Azure cloud database using SQLAlchemy, and building robust data models to support advanced analytics.
-      \item Directed a team of 5 in data pipeline development, orchestrating ETL processes, data warehousing solutions, and real-time data streaming to improve data accessibility and analytics capabilities.
-      \item Managed the procurement and implementation of advanced data engineering tools and technologies, including Azure Data Factory, Azure SQL Server, and Azure PowerApps, leading to over \$100k in cost savings.
-      \item Suggested and implemented tools such as GitHub for version control and CMSs for content management, improving collaboration and workflow efficiency.
-      \item Supervised the hiring, onboarding, and mentorship of co-op students and new staff, assigned tasks, managed pull requests, git repositories, and branches, fostering a collaborative and productive team environment.
-      \item Conducted regular team meetings, acted as a manager, and provided leadership in project planning and execution, ensuring alignment with organizational goals.
-      \item Coordinated with cross-functional teams to design robust software architectures, define technical requirements, and ensure seamless integration of data engineering solutions across various platforms.
-      \item Conducted regular code reviews, provided technical guidance on data modelling, data integration, and pipeline optimization, promoting high-quality and maintainable code.
-      \item Developed internal data cleaning and transformation tools using RESTful API design with Flask/Django/Node, and Vue.js, connected to an Azure database, enhancing data quality and consistency.
-      \item Tackled significant challenges in name entity recognition using Levenshtein distances and the NLTK library in Python, improving data accuracy and processing efficiency.
-    \end{cvitems}
-  }
+ \cventry%
+ {Data Engineer/Team Lead}
+ {Ontario Public Service --- Treasury Board Secretariat}
+ {Toronto, Canada}
+ {2019 --- 2024}
+ {
+   \begin{cvitems}
+     \item Led the division's data overhaul project, modernizing digital infrastructure. Utilized Python and Pandas for processing, SQLAlchemy for data integration, and built robust data models supporting advanced analytics for business decision-making.
+     \item Directed a team of 5 in data pipeline development, orchestrating ETL processes, data warehousing solutions, and real-time data streaming to improve data accessibility and analytics capabilities.
+     \item Implemented CI/CD practices with GitHub for version control, managing pull requests and git repositories in an Agile environment, improving collaboration and development workflow efficiency.
+     \item Coordinated with cross-functional teams to design scalable software architectures, define technical requirements, and ensure seamless integration of data engineering solutions across platforms.
+     \item Conducted regular code reviews, provided technical guidance on data modelling, data integration, and pipeline optimization, promoting high-quality and maintainable code.
+     \item Developed data transformation tools using RESTful API design with Flask/Django and Python, processing over 50 million records monthly while maintaining system performance.
+     \item Tackled significant challenges in name entity recognition using Levenshtein distances and the NLTK library in Python, improving data accuracy and processing efficiency of large datasets.
+   \end{cvitems}
+ }
 
 \cventry%
   {Workforce Analyst}
@@ -76,18 +73,3 @@
       %S\item Collaborated with cross-functional teams to analyze workforce trends, identify improvement areas, and develop an equitable job classification system, contributing to more informed decision-making.
     \end{cvitems}
   }
-
-\cventry%
-  {Linux System Administrator}
-  {Soho VFX}
-  {Toronto, Canada}
-  {2016 --- 2017}
-  {
-    \begin{cvitems}
-      \item Upgraded the render farm by setting up, installing, and configuring new servers, resulting in improved performance and reduced rendering times for large-scale visual effects projects.
-      \item Automated repetitive tasks, upgraded software, and optimized systems to provide efficient technical support, saving significant time and ensuring high system performance.
-      \item Recognized for outstanding contributions as a Systems Administrator in the production of the movie Logan (2017).
-      \item Performed routine maintenance and troubleshooting of hardware and software, ensuring smooth operation and minimal downtime, which was crucial for meeting production deadlines.
-    \end{cvitems}
-  }
-\end{cventries}
