--- a/cv/data-engineer-summary.tex
+++ b/cv/data-engineer-summary.tex
@@ -1,8 +1,5 @@
 \cvsection{Summary}
 
-
 \begin{cvparagraph}
-
-%---------------------------------------------------------
-Experienced Data Engineer and Team Lead with 7+ years of progressive experience in software implementation, data engineering, and technical team management. With a proven track record of leading cross-functional teams, implementing enterprise solutions, and aligning technology with business objectives across multiple Ontario Public Service Ministries.
+Experienced Data Engineer with 7+ years of expertise building scalable data pipelines, optimizing data models, and implementing enterprise data solutions. Proven track record of leading cross-functional teams and delivering end-to-end data systems that drive business decisions across multiple departments. Technical background in Python, SQL, ETL processes, and modern data engineering frameworks.
 \end{cvparagraph}
