fix(Content): :bug: Fix missing \end command

--- a/cv/data-engineer-experience.tex
+++ b/cv/data-engineer-experience.tex
@@ -73,3 +73,5 @@
       %S\item Collaborated with cross-functional teams to analyze workforce trends, identify improvement areas, and develop an equitable job classification system, contributing to more informed decision-making.
     \end{cvitems}
   }
+
+\end{cventries}
