--- a/cv/software-manager/experience.tex
+++ b/cv/software-manager/experience.tex
@@ -1,11 +1,11 @@
+% Software Manager Experience
 %-------------------------------------------------------------------------------
-%	SECTION TITLE
+% SECTION TITLE
 %-------------------------------------------------------------------------------
 \cvsection{Experience}
 
-
 %-------------------------------------------------------------------------------
-%	CONTENT
+% CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
