--- a/cv/data-engineer/experience.tex
+++ b/cv/data-engineer/experience.tex
@@ -8,36 +8,20 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
-% \cventry
-%   {Owner/Operator}
-%   {TWDickson Consulting}
-%   {Toronto, Canada}
-%   {October 20, 2021 - Present}
-%   {
-%     \begin{cvitems}
-%       \item Providing web development, automation, and data engineering expertise.
-%       \item Designing and coding a static site generator for \textbf{Topology Health} (https://topology.health).
-%       \item Working closely with clients to produce a uniform and harmonized information architecture.
-%       \item Creating documentation for knowledge transfer, facilitating easy client site maintenance.
-%       \item Implementing robust content management systems for seamless website updates.
-%       \item Successfully managing client relationships through various remote communication platforms.
-%     \end{cvitems}
-%   }
-
 \cventry%
  {Data Engineer}
- {Ontario Public Service --- Attorney General}
+ {Ontario Public Service --- Ministry of the Attorney General}
  {Toronto, Canada}
  {2024 --- Present}
  {
 	\begin{cvitems}
-		\item Working in a high security environment with sensitive data, ensuring compliance with data protection standards.
-		\item Led the implementation of Data Build Tool (DBT) for data transformation and modelling, enhancing data quality and consistency across multiple data sources.
-		\item Designed and implemented dimensional model of data warehouse using Kimball methodology, improving data accessibility and reporting capabilities.
-		\item Collaborated with cross-functional teams to define data requirements, ensuring alignment with business objectives and enhancing data-driven decision-making processes.
-		\item Managed performance tuning and optimization of existing ETL processes, resulting in improved data processing times and reduced resource consumption.
-		\item Developed comprehensive documentation for data models, ETL processes, and system architecture to facilitate knowledge transfer and ensure maintainability of solutions.
-		\item Utilized Agile methodologies to manage project delivery, coordinating cross-team dependencies and ensuring timely delivery of data solutions.
+		\item Led adoption of Data Build Tool (DBT) for our data transformation pipeline, bringing modern practices to handle legacy mainframe court data during the 7-year system migration.
+		\item Working with sensitive judicial data in a high-security environment, maintaining strict compliance with data protection standards throughout the migration process.
+		\item Built dimensional data warehouse using Kimball methodology to keep court reporting running smoothly while legacy systems are migrated to a unified platform.
+		\item Managed Azure cloud infrastructure, inlcuding Databricks and Azure Data Factory (ADF) processing environments, utilizing command-line expertise to troubleshoot and optimize configuration, diagnotics, and montioring.
+		\item Developing DBT transformations that convert anchor-modeled data into dimensional models, leveraging Spark for large dataset testing. Ensuring analysts stay connected to critical court metrics throughout the migration.
+		\item Established git workflows for our small team using feature branches and conventional commits, improving code organization and collaboration on data models and documentation.
+		\item Use Agile methods to keep our team organized and coordinate with other groups, ensuring we deliver data solutions on schedule, with a fair division of labour.
 	\end{cvitems}
  }
 
@@ -47,15 +31,15 @@
  {Toronto, Canada}
  {2019 --- 2024}
  {
-	 \begin{cvitems}
-		 \item Led the division's data overhaul project, modernizing digital infrastructure. Utilized Python and Pandas for processing, SQLAlchemy for data integration, and built robust data models supporting advanced analytics for business decision-making.
-		 \item Directed a team of 5 in data pipeline development, orchestrating ETL processes, data warehousing solutions, and real-time data streaming to improve data accessibility and analytics capabilities.
-		 \item Implemented CI/CD practices with GitHub for version control, managing pull requests and git repositories in an Agile environment, improving collaboration and development workflow efficiency.
-		 \item Coordinated with cross-functional teams to design scalable software architectures, define technical requirements, and ensure seamless integration of data engineering solutions across platforms.
-		 \item Conducted regular code reviews, provided technical guidance on data modelling, data integration, and pipeline optimization, promoting high-quality and maintainable code.
-		 \item Developed data transformation tools using RESTful API design with Flask/Django and Python, processing over 50 million records monthly while maintaining system performance.
-		 \item Tackled significant challenges in name entity recognition using Levenshtein distances and the NLTK library in Python, improving data accuracy and processing efficiency of large datasets.
-	 \end{cvitems}
+    \begin{cvitems}
+        \item Led the division's data overhaul project, modernizing digital infrastructure using Python and Pandas for processing, SQLAlchemy for data integration, and building robust data models for advanced analytics.
+        \item Managed a team of 5 in building data pipelines, ETL processes, and data warehousing solutions that improved data accessibility and analytics capabilities across the organization.
+        \item Architected and deployed cloud infrastructure on Azure, configuring Linux servers and network environments to support scalable data processing and ensure reliable system performance.
+        \item Implemented CI/CD practices with GitHub for version control, managing pull requests and repositories in an Agile environment to improve collaboration and development workflow efficiency.
+        \item Conducted regular code reviews and provided technical guidance on data modeling, integration, and pipeline optimization to maintain high-quality, maintainable code.
+        \item Built data audit tools using RESTful APIs with Flask/Django and Node for internal data cleaning and validation by stakeholder analytics teams.
+        \item Tackled complex name entity recognition challenges using Levenshtein distances and NLTK library in Python, improving data accuracy and processing efficiency for large datasets.
+    \end{cvitems}
  }
 
 \cventry%
@@ -65,12 +49,25 @@
 	{2017 --- 2019}
 	{
 		\begin{cvitems}
-			\item Utilized SQL, MS Access, Excel, VBA, and Python for data management, reporting, visualization, and process automation, supporting business operations with timely and accurate data insights.
-			\item Automated the generation and distribution of over 7000 customized documents, significantly reducing manual labor and enabling directors to quickly access and analyze their staff information.
-			\item Created and optimized reports comparing content across multiple documents, improving efficiency and accuracy in data reporting and reducing manual workload.
-			\item Ensured data integrity across multiple systems through regular data quality checks and recommended enhancements to data management processes to improve overall data reliability.
-			%S\item Collaborated with cross-functional teams to analyze workforce trends, identify improvement areas, and develop an equitable job classification system, contributing to more informed decision-making.
+			\item Used SQL, MS Access, Excel, VBA, and Python for data management, reporting, and visualization, supporting business operations with timely and accurate insights.
+			\item Automated generation and distribution of over 7,000 customized documents, significantly reducing manual work and enabling directors to quickly access staff information.
+			\item Created and optimized reports comparing content across multiple documents, improving efficiency and accuracy while reducing manual workload.
+			\item Ensured data integrity across multiple systems through regular quality checks and recommended enhancements to improve overall data reliability.
 		\end{cvitems}
 	}
+
+% \cventry%
+%   {Linux System Administrator}
+%   {Soho VFX}
+%   {Toronto, Canada}
+%   {2016 --- 2017}
+%   {
+%     \begin{cvitems}
+%       \item Upgraded the render farm by setting up, installing, and configuring new servers, resulting in improved performance and reduced rendering times for large-scale visual effects projects.
+%       \item Automated repetitive tasks, upgraded software, and optimized systems to provide efficient technical support, saving significant time and ensuring high system performance.
+%       \item Performed routine maintenance and troubleshooting of hardware and software, ensuring smooth operation and minimal downtime, which was crucial for meeting production deadlines.
+%       \item Recognized for outstanding contributions as a Systems Administrator in the production of the movie Logan (2017).
+%     \end{cvitems}
+%   }
 
 \end{cventries}
