--- a/cv/data-engineer/skills.tex
+++ b/cv/data-engineer/skills.tex
@@ -1,9 +1,9 @@
 \cvsection{Skills}
 
 \begin{cvskills}
-	\cvskill{Data}{Python, DBT, Azure Data Factory, Databricks, SQL}
-	\cvskill{Leadership}{Team Management, Project Management, Stakeholder Communication, Vendor Relations}
-	\cvskill{Front-end}{JavaScript, Vue, HTML, CSS}
-	\cvskill{Back-end}{Python, Django, Flask, Go Lang, Node, Express, REST API}
-	\cvskill{DevOps}{Docker, Shell Scripting (BASH), Linux Administration}
+	\cvskill{Data Engineering}{Python, DBT, SQL, Azure Data Factory, Databricks, ETL/ELT Pipelines}
+	\cvskill{Cloud \& Infrastructure}{Azure, Linux Administration, Docker, Shell Scripting (BASH), Networking}
+	\cvskill{Development}{Git, Python, Django, Flask, Go Lang, JavaScript, REST APIs}
+	\cvskill{Frontend}{Vue, HTML, CSS, JavaScript}
+	\cvskill{Leadership}{Team Management, Project Management, Stakeholder Communication, Agile Methodologies}
 \end{cvskills}
