--- a/cv/data-engineer/summary.tex
+++ b/cv/data-engineer/summary.tex
@@ -1,5 +1,5 @@
 \cvsection{Summary}
 
 \begin{cvparagraph}
-Experienced Data Engineer with 7+ years of expertise building scalable data pipelines, optimizing data models, and implementing enterprise data solutions. Proven track record of leading cross-functional teams and delivering end-to-end data systems that drive business decisions across multiple departments. Technical background in Python, SQL, ETL processes, and modern data engineering frameworks.
+Data Engineer with 7+ years building data pipelines and leading teams through complex projects. Strong advocate for open source solutions, implementing tools like DBT and modern git workflows for government teams, helping them move away from legacy systems toward more collaborative approaches. Quick to learn and implement new technologies, with hands-on experience across Python, SQL, Linux infrastructure, cloud platforms, and whatever tools the project demands.
 \end{cvparagraph}
