--- a/cv/dev-ops/experience.tex
+++ b/cv/dev-ops/experience.tex
@@ -8,11 +8,11 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
-\cventry
+\cventry%
 	{Senior Research Analyst/Team Lead}
-	{Ontario Public Service - Treasury Board Secretariat}
+	{Ontario Public Service -- Treasury Board Secretariat}
 	{Toronto, Canada}
-	{2019 - Present}
+	{2019 -- Present}
 	{
 		\begin{cvitems}
 			\item Led the division's data overhaul project, modernizing and enhancing digital data infrastructure, including partial migration to Azure cloud and Google Apps Scripts for automated processes.
@@ -25,11 +25,11 @@
 		\end{cvitems}
 	}
 
-\cventry
+\cventry%
 	{Workforce Analyst}
-	{Ontario Public Service - Ministry of Government \& Consumer Services}
+	{Ontario Public Service -- Ministry of Government \& Consumer Services}
 	{Toronto, Canada}
-	{2017 - 2019}
+	{2017 -- 2019}
 	{
 		\begin{cvitems}
 			\item Leveraged data management and automation skills using SQL, Python, and VBA to support business operations, significantly improving data processing and reporting capabilities.
@@ -39,11 +39,11 @@
 		\end{cvitems}
 	}
 
-\cventry
+\cventry%
 	{Junior System Administrator}
 	{Soho VFX}
 	{Toronto, Canada}
-	{2016 - 2017}
+	{2016 -- 2017}
 	{
 		\begin{cvitems}
 			\item Completed a render farm upgrade by setting up, installing, and configuring new servers, resulting in improved performance and reduced rendering times.
