--- a/personal_details.tex
+++ b/personal_details.tex
@@ -21,7 +21,7 @@
 	\position{Senior Research Analyst{\enskip\cdotp\enskip}IT, Data \& Systems Professional}%
 }}}}
 
-\address{Toronto, Canada}
+% \address{Toronto, Canada}
 
 \mobile{1--647--518--2894}
 \email{mail@twdickson.com}
