feat(Content): :sparkles: Update Data Engineer Experience to be more value driven

--- a/cv/data-engineer/experience.tex
+++ b/cv/data-engineer/experience.tex
@@ -15,13 +15,13 @@
  {2024 --- Present}
  {
 	\begin{cvitems}
-		\item Led adoption of Data Build Tool (DBT) for our data transformation pipeline, bringing modern practices to handle legacy mainframe court data during the 7-year system migration.
-		\item Working with sensitive judicial data in a high-security environment, maintaining strict compliance with data protection standards throughout the migration process.
-		\item Built dimensional data warehouse using Kimball methodology to keep court reporting running smoothly while legacy systems are migrated to a unified platform.
-		\item Managed Azure cloud infrastructure, inlcuding Databricks and Azure Data Factory (ADF) processing environments, utilizing command-line expertise to troubleshoot and optimize configuration, diagnotics, and montioring.
-		\item Developing DBT transformations that convert anchor-modeled data into dimensional models, leveraging Spark for large dataset testing. Ensuring analysts stay connected to critical court metrics throughout the migration.
+		\item Saved over \$300K annually by implementing Data Build Tool (DBT) for our unified court model, bringing modern practices to handle legacy mainframe court data, eliminating the need for IBM Cognos licensing across 4 teams while creating a maintainable solution for the 7-year system migration.
+		\item Managed sensitive judicial data across Ontario's entire court system with RCMP security clearance, maintaining strict compliance throughout the critical 7-year migration process.
+		\item Designed data warehouse supporting reporting across 150+ provincial courts, enabling executive and public reporting on case flow that directly informs multi-million dollar investments in court locations, judicial staffing, and child welfare services.
+		\item Managed Azure cloud infrastructure, including Databricks and Azure Data Factory (ADF) processing environments, utilizing command-line expertise to troubleshoot and optimize configuration, diagnostics, and monitoring.
+		\item Developing DBT transformations that convert anchor-modelled data into dimensional models, utilizing Spark for large dataset processing. Ensuring analysts stay connected to critical court metrics throughout the migration.
 		\item Established git workflows for our small team using feature branches and conventional commits, improving code organization and collaboration on data models and documentation.
-		\item Use Agile methods to keep our team organized and coordinate with other groups, ensuring we deliver data solutions on schedule, with a fair division of labour.
+		\item Implemented agile methodologies in our team, allowing for better coordination across multiple teams, ensuring timelines during a \$160M+ court system migration project.
 	\end{cvitems}
  }
 
@@ -32,12 +32,12 @@
  {2019 --- 2024}
  {
     \begin{cvitems}
-        \item Led the division's data overhaul project, modernizing digital infrastructure using Python and Pandas for processing, SQLAlchemy for data integration, and building robust data models for advanced analytics.
-        \item Managed a team of 5 in building data pipelines, ETL processes, and data warehousing solutions that improved data accessibility and analytics capabilities across the organization.
+        \item Automated critical union negotiation data pipeline influencing multi-million dollar contracts affecting tens of thousands of provincial employees, transforming manual processes into real-time PowerBI dashboards for executive decision-making.
+        \item Led team of 5 to deliver enterprise data solutions supporting executive decision-making across Treasury Board operations, improving data accessibility for hundreds of government analysts, enabling data-driven policy decisions and multimillion dollar union negotiations.
         \item Architected and deployed cloud infrastructure on Azure, configuring Linux servers and network environments to support scalable data processing and ensure reliable system performance.
         \item Implemented CI/CD practices with GitHub for version control, managing pull requests and repositories in an Agile environment to improve collaboration and development workflow efficiency.
-        \item Conducted regular code reviews and provided technical guidance on data modeling, integration, and pipeline optimization to maintain high-quality, maintainable code.
-        \item Built data audit tools using RESTful APIs with Flask/Django and Node for internal data cleaning and validation by stakeholder analytics teams.
+        \item Conducted regular code reviews and provided technical guidance on data modelling, integration, and pipeline optimization to maintain high-quality, maintainable code.
+        \item Developed entity resolution tools using RESTful APIs that enabled junior staff and co-op students to validate complex data models, reducing operational costs while maintaining data quality standards.
         \item Tackled complex name entity recognition challenges using Levenshtein distances and NLTK library in Python, improving data accuracy and processing efficiency for large datasets.
     \end{cvitems}
  }
@@ -49,9 +49,9 @@
 	{2017 --- 2019}
 	{
 		\begin{cvitems}
-			\item Used SQL, MS Access, Excel, VBA, and Python for data management, reporting, and visualization, supporting business operations with timely and accurate insights.
-			\item Automated generation and distribution of over 7,000 customized documents, significantly reducing manual work and enabling directors to quickly access staff information.
-			\item Created and optimized reports comparing content across multiple documents, improving efficiency and accuracy while reducing manual workload.
+			\item Automated generation of 7,000+ executive level employee reclassification packages for a province-wide job classification project affecting 10,000 employees, saving dozens of staff weeks of manual work while ensuring consistent delivery of salary, duty, and title changes.
+			\item Managed critical data pipeline for union-negotiated job reclassification deadline, ensuring accurate and timely delivery of employee notifications and condensed executive reports across government ministries.
+			\item Built automated job description comparison tools for classification teams, enabling quick identification of similar roles across hundreds of position descriptions and reducing duplicate classifications, while saving over 70 hours of manual work.
 			\item Ensured data integrity across multiple systems through regular quality checks and recommended enhancements to improve overall data reliability.
 		\end{cvitems}
 	}
