feat(Content): :sparkles: Updated Summary to be more targeted

--- a/cv/data-engineer/summary.tex
+++ b/cv/data-engineer/summary.tex
@@ -1,5 +1,5 @@
 \cvsection{Summary}
 
 \begin{cvparagraph}
-Data Engineer with 7+ years building data pipelines and leading teams through complex projects. Strong advocate for open source solutions, implementing tools like DBT and modern git workflows for government teams, helping them move away from legacy systems toward more collaborative approaches. Quick to learn and implement new technologies, with hands-on experience across Python, SQL, Linux infrastructure, cloud platforms, and whatever tools the project demands.
+Senior Data Engineer with 7+ years building scalable data pipelines, leading cross-functional teams to deliver measurable business impact through modern cloud infrastructure and data solutions that drive multi-million dollar decisions affecting thousands of users. Experienced in Python, SQL, dimensional modeling, DBT transformations, and modern data stack tools, while maintaining data integrity and enabling data-driven decision making across organizations.
 \end{cvparagraph}
