feat(Content): :sparkles: Updated Cover Letter for Jobber

--- a/Taylor Dickson Cover Letter.tex
+++ b/Taylor Dickson Cover Letter.tex
@@ -49,30 +49,8 @@
 %	PERSONAL INFORMATION
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
-% Available options: circle|rectangle,edge/noedge,left/right
-%\photo[circle,noedge,left]{./examples/profile}
-\name{Taylor}{Dickson}
+\input{personal\_details.tex} % Personal Information
 \position{Data Engineer{\enskip\cdotp\enskip} IT \& Systems Professional}
-\address{Toronto, Canada}
-
-\mobile{1--647--518--2894}
-\email{mail@twdickson.com}
-%\dateofbirth{January 1st, 1970}
-\homepage{twdickson.com}
-\github{TWDickson}
-\linkedin{TWDickson}
-% \gitlab{gitlab-id}
-% \stackoverflow{SO-id}{SO-name}
-% \twitter{@twit}
-% \skype{skype-id}
-% \reddit{reddit-id}
-% \medium{madium-id}
-% \kaggle{kaggle-id}
-% \googlescholar{googlescholar-id}{name-to-display}
-%% \firstname and \lastname will be used
-% \googlescholar{googlescholar-id}{}
-% \extrainfo{extra information}
-
 % \quote{``Be the change that you want to see in the world."}
 
 
@@ -82,12 +60,12 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient%
-  {Corporate and Financial Services}
-  {City of Richmond Hill}
+  {Data Platform Team}
+  {Jobber}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Supervisor Application Services}
+\lettertitle{Job Application for Senior Data Engineer, Platform}
 % How the letter is opened
 \letteropening{Dear Hiring Manager,}
 % How the letter is closed
@@ -117,32 +95,17 @@
 %	LETTER CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvletter}
-I am writing to apply for the position of Supervisor Application Services with the City of Richmond Hill (Posting Id: 2913). With over seven years of progressive experience in IT leadership, systems analysis, and application development, I am eager to contribute my expertise to leading your Application Services team.
+I am excited to apply for the Senior Data Engineer position at Jobber. With 7+ years of experience building scalable data pipelines and leading teams through complex data transformations, I'm drawn to Jobber's mission of empowering small businesses through technology. The opportunity to do meaningful work that creates real impact for people and their livelihoods strongly appeals to me.
 
-My experience as a Data Engineer/Team Lead at the Ontario Public Service has prepared me well for this role. In that position, I successfully:
-\begin{itemize}
-  \item Led a team of 5 technical specialists through complex data infrastructure modernization, providing direction, feedback, and professional development opportunities.
-  \item Collaborated closely with stakeholders to define clear requirements and develop strategies aligned with business objectives.
-  \item Managed multiple concurrent development projects and application support functions using open source frameworks in Python, SQL, Flask, and Vue.js.
-  \item Established data quality standards and testing procedures to ensure solution reliability and business acceptance.
-\end{itemize}
-In my current role at the Attorney General's office, I've further strengthened my technical expertise by implementing modern tools like DBT for data transformation and modeling, designing dimensional data warehouses, and optimizing ETL processes—all while working in a high-security environment with sensitive data.
+In my current role as Data Engineer at Ontario's Ministry of the Attorney General, I saved over \$300K annually by implementing DBT for our unified court model, directly paralleling Jobber's need for scalable ETL/ELT solutions. I've designed data warehouses supporting 150+ locations while managing sensitive data with strict compliance requirements, experience that translates well to handling Jobber's customer data at scale.
 
-I bring to this position:
-\begin{itemize}
-  \item Strong leadership skills with experience in recruiting, mentoring, and developing technical staff
-  \item Expertise in multiple programming languages including Python, JavaScript, and various frameworks
-  \item Experience managing I.T. relationships and integrations
-  \item A collaborative approach to working with cross-functional teams and stakeholders
-  \item Excellent problem-solving abilities with a focus on developing innovative and effective business solutions
-\end{itemize}
+While my cloud expertise centers on Azure rather than AWS, the fundamentals are highly transferable. I've architected cloud infrastructure using Azure Data Factory (analogous to AWS Glue), managed Databricks environments (similar to EMR), and extensively used docker with docker-compose and have a background in Linux system administration. All critical skills for AWS ECS Fargate deployments. My experience with infrastructure-as-code principles, including containerization and automated deployment workflows, provides a strong foundation for adopting Terraform in AWS environments. Combined with my CI/CD practices and dimensional modelling using DBT, this experience directly aligns with your technical requirements.
 
+Leading a team of 5 at Treasury Board Secretariat, I automated critical data pipelines influencing union negotiations affecting thousands of employees, demonstrating the leadership and stakeholder communication skills essential for collaborating with Jobber's cross-functional teams. My proven track record of implementing agile methodologies and conducting code reviews shows I can contribute to Jobber's culture of innovation from day one.
 
-The opportunity to lead software implementation and development at the City of Richmond Hill is exciting. I am particularily interested in the oppertunity to deliver high quality software solutions while leveraging my background in open source software development, and infrasture management.
+I'm excited about the opportunity to contribute to Jobber's data platform and learn from your team's expertise. My experience with large-scale data migrations and enabling analytics for decision-makers has shown me the value of reliable, well-designed data infrastructure in driving business outcomes.
 
-I am excited about the opportunity to work with the city and contribute to its growth and my own. With my technical expertise, dedication to excellence, and passion for solving complex problems, I am confident that I can make a significant impact as the Supervisor of Application Services.
-
-I welcome the opportunity to discuss how my background aligns with your needs. Thank you for considering my application.
+Thank you for considering my application. I look forward to discussing how my transferable cloud expertise and proven leadership in data engineering can contribute to Jobber's continued growth.
 \end{cvletter}
 
 
